fix Discover alignment

--- a/frontend/src/components/Artist/Artist.scss
+++ b/frontend/src/components/Artist/Artist.scss
@@ -10,7 +10,6 @@
 
 .Name {
   font-size: 24px;
-  color: $color-default;
 }
 
 .select {
