--- a/frontend/src/components/Playlists/Playlists.scss
+++ b/frontend/src/components/Playlists/Playlists.scss
@@ -13,7 +13,7 @@
   padding: 4px 10px 1px 10px;
   background: $color-accent-dark;
   border: none;
-  margin-left: 20px;
+  margin-right: 20px;
   font-size: 14px;
   font-family: $font-default;
   transition: $transition-base;
